# Thesis_github

./: .gitignore  Analysis_Age.ipynb  Analysis_Paper copy 2.ipynb  Analysis_Paper copy.ipynb  Analysis_Paper.ipynb  Analyze_paper.ipynb  Data_prep.ipynb  Descriptive_Analysis.ipynb  Fishers_test.ipynb  Get_Age_info.ipynb  Get_Paper_info copy 2.ipynb  Get_Paper_info copy.ipynb  Get_Paper_info.ipynb  Get_citation_info.ipynb  Histograms_Age.ipynb  Histograms_Paper.ipynb  Histograms_Productivity.ipynb  Note to self.txt  Permutation_test.ipynb  Potential_speakers.drawio  Preprocessing.ipynb  Similarity.drawio  Similarity_Matching.ipynb  Similarity_Matching_NEW.ipynb  Similarity_Matching_normalized.ipynb  Similarity_bubbles.drawio  To do.txt  Untitled Diagram.drawio  WWW_2001.txt  daller.ipynb  dimConference.txt  literature.txt  pyproject.toml  random_similar.drawio  setup.py
Data/: dimConference.csv  factInvited.csv
Drawings/: Data_process.drawio
Get_Data/: AAAI_data.ipynb  APS_data.ipynb  ASPDAC_data.ipynb  CHI_data.ipynb  CVPR_data.ipynb  ECCV_data.ipynb  HiPC_data.ipynb  IC2S2_data.ipynb  ICIP_data.ipynb  ICML_data.ipynb  IJCAI_data.ipynb  KDD.ipynb  LICS_data.ipynb  NIPS_data.ipynb  RTA_data.ipynb  SC.ipynb  SC_data.ipynb  SIGGRAPH.ipynb  SODA_data.ipynb  STOC_data.ipynb  SWAT.ipynb  SWAT_data.ipynb  TED_data.ipynb  WADS_data.ipynb  WWW_data.ipynb  WoLLIC_data.ipynb
Key Note Speakers/: Data_prep.ipynb
hpc_script/: get_citation.py
script/: compress_file.py  filter_cs_author.py  get_citation.py  get_citation_dummy.py  preprocessing.py  query.py  setup.py  test.py
(+10 files in other folders)
