[tool.poetry]
name = "conf-and-fairness"
version = "0.1.0"
description = "Evolution of Gender Diversity in Academia"
authors = ["elisabettasalvai <elisabetta.salvai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
requests = "^2.32.2"
scipy = "^1.13.1"
unidecode = "^1.3.8"
nltk = "^3.8.1"
plotly = "^5.22.0"
bs4 = "^0.0.2"
wikipedia = "^1.4.0"
tqdm = "^4.66.4"
scikit-learn = "^1.5.0"
ipykernel = "^6.29.4"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
